k8s/deploy.yml
# save as ghes-auth-deployment.yaml or pipe it to oc apply
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghes-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghes-auth
  template:
    metadata:
      labels:
        app: ghes-auth
    spec:
      containers:
        - name: ghes-auth
          image: image-registry.openshift-image-registry.svc:5000/default/ghes-auth-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: gh-ca
              mountPath: /etc/gh-ca
              readOnly: true
      volumes:
        - name: gh-ca
          secret:
            secretName: ghes-ca-cert
