k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ghes-auth
spec:
  selector:
    app: ghes-auth
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
